[gd_scene load_steps=3 format=3 uid="uid://bqgtjd0dskmjr"]

[ext_resource type="Script" path="res://scenes/scene_components/locational_dialogue_trigger/security_guard_dialogue_trigger.gd" id="1_0rsts"]
[ext_resource type="PackedScene" uid="uid://cemmf570s8hey" path="res://general_components/dialogue_emitter/dialogue_emitter.tscn" id="1_x0bjs"]

[node name="SecurityGuardDialogueTrigger" type="Area2D"]
collision_mask = 2
script = ExtResource("1_0rsts")

[node name="DialogueEmitter" parent="." instance=ExtResource("1_x0bjs")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
